Add dependencies
Added Delaunay and Minimum Spanning Tree classes. Added JFreeChart-FX
through Maven.